# obsidian-notes-karpathy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md  justfile
docs/: .gitignore  README.md  index.md  optimization-plan.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/architecture/: archive-model.md  boundaries.md  chinese-llm-wiki-compat.md  overview.md  writeback-search.md
docs/guide/: agents-schema.md  directory-structure.md  installation.md  introduction.md  karpathy-workflow.md  quick-start.md
docs/skills/: kb-compile.md  kb-health.md  kb-ingest.md  kb-init.md  kb-query.md  kb-render.md  kb-review.md  obsidian-canvas-creator.md  obsidian-cli.md  obsidian-markdown.md  obsidian-notes-karpathy.md  overview.md
docs/workflow/: collect.md  compile.md  health-checks.md  overview.md  query.md
docs/zh/: index.md
skills/kb-compile/: SKILL.md
skills/kb-health/: SKILL.md
src/: audit_log.rs  automation.rs  common.rs  compile.rs  config.rs  episodes.rs  governance.rs  graph.rs  guidance.rs  health.rs  ingest.rs  init.rs  layout.rs  lib.rs  main.rs  query.rs  render.rs  review.rs  skills.rs
tests/: _bundle_test_support.py  cli_smoke.rs  compile_review.rs  contract_routing.rs  dev_tools.rs  doc_fragments.rs  docs_contract.rs  init_workflow.rs  payload_compat.rs  query_health.rs  skill_bundle.rs  test_compile_review.py  test_contract_and_routing.py  test_docs_and_evals.py  test_init_workflow.py  test_quality_commands.py  test_query_health.py  test_skill_audit.py  test_skill_bundle.py  test_trigger_eval_harness.py
(+466 files in other folders)
