[package]
name = "onkb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Review-gated Obsidian knowledge-base CLI"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
include_dir = "0.7"
once_cell = "1.21"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
toml = "1.1.2"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.42", features = ["json", "redactions"] }
tempfile = "3.15"
